Fix for misaligned sidebar floats
H1 display type caused content to appear wayyy down the page underneath
the right callouts.

--- a/css/main.scss
+++ b/css/main.scss
@@ -466,11 +466,12 @@
             font-weight: 900;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             line-height: 40px;
-            margin-bottom: 20px;
             margin-top: 0px;
 
-            @media (min-width: 992px) {
-                display: inline-block;
+            &:after {
+                content:'';
+                display:block;
+                margin-bottom:20px;
             }
         }
         h1 + h2 {
